--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "compile:sass": "sass sass/main.scss css/style.css"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,9 @@
   "description": "",
   "dependencies": {
     "firebase": "^10.12.3",
+    "highcharts": "^11.4.8",
+    "highcharts-more": "^0.1.7",
+    "highcharts-react-official": "^3.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
@@ -31,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.79.5"
   }
 }
